--- a/strapi/package.json
+++ b/strapi/package.json
@@ -5,7 +5,7 @@
   "description": "A Strapi application",
   "scripts": {
     "set": "../utils/scripts/set-env.sh ld",
-    "develop": "trap 'gshred .env ; rm .env ; echo Removed .env ; exit 0' SIGINT; npm run set && npm run strapi develop",
+    "develop": "trap 'gshred .env ; rm .env ; echo ; echo Removed .env ; exit 0' SIGINT; npm run set && npm run strapi develop",
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi"
