--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,18 @@ exports
 dist
 build
 .strapi-updater.json
+
+############################
+# Terraform
+############################
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+crash.*.log
