--- a/strapi/package.json
+++ b/strapi/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.10.5",
     "@strapi/plugin-users-permissions": "4.10.5",
+    "@strapi/provider-upload-aws-s3": "4.10.5",
     "@strapi/strapi": "4.10.5",
     "pg": "^8.10.0"
   },
