--- a/_utils/_cliff/dir.toml
+++ b/_utils/_cliff/dir.toml
@@ -9,10 +9,9 @@
 # changelog header
 header = """
 # Changelog\n
-All notable changes to this project will be documented in this file.\n
+All notable changes to this directory will be documented in this file.\n
 """
 # template for the changelog body
-# https://tera.netlify.app/docs/
 body = """
 {% if version %}\
     ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
