--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "front",
-  "version": "0.1.0",
+  "name": "dgrebb.com",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev -H local.dgrebb.com",
