--- a/strapi/package.json
+++ b/strapi/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "strapi",
+  "name": "cms.dgrebb.com",
   "private": true,
-  "version": "0.1.0",
-  "description": "A Strapi application",
+  "version": "1.0.0",
+  "description": "dgrebb.com CMS",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
