refactor(project): removes and ignores commitizen config file

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,9 @@ build
 # Crash log files
 crash.log
 crash.*.log
+
+############################
+# Commitizen
+############################
+
+.cz.toml
