--- a/_utils/_cliff/all.toml
+++ b/_utils/_cliff/all.toml
@@ -10,7 +10,7 @@
 header = """
 # Changelog\n
 All notable changes to this project will be documented in this file.\n\n
-Directory-specific changes can be found for each of [_docker](_docker/CHANGELOG.md) [_tf](_tf/CHANGELOG.md), [_utils](_utils/CHANGELOG.md), [front](front/CHANGELOG.md), and [strapi](strapi/CHANGELOG.md), as well.
+Directory-specific changes can be found for each of [_docker](_docker/CHANGELOG.md), [_tf](_tf/CHANGELOG.md), [_utils](_utils/CHANGELOG.md), [front](front/CHANGELOG.md), and [strapi](strapi/CHANGELOG.md), as well.
 """
 # template for the changelog body
 body = """
