--- a/strapi/package.json
+++ b/strapi/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "4.10.7",
     "@strapi/provider-upload-aws-s3": "4.10.7",
     "@strapi/strapi": "4.10.7",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "strapi-blurhash": "^1.1.1"
   },
   "author": {
     "name": "A Strapi developer"
