--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"blurhash": "^1.1.5",
+		"svelte-blurhash": "^1.2.1",
 		"svelte-markdown": "^0.2.3"
 	}
 }
