--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sentry/node": "^7.54.0",
+		"@sentry/profiling-node": "^0.3.0",
+		"@sentry/svelte": "^7.54.0",
 		"blurhash": "^1.1.5",
 		"svelte-blurhash": "^1.2.1",
 		"svelte-markdown": "^0.2.3"
