--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: dgrebb/dgrebb.com
-          ref: develop
+          ref: ${{ secrets.DEPLOYMENT_BRANCH }}
           token: ${{ github.token }}
 
       - name: Use Node.js ${{ matrix.node-version }}
