feat(front): adds and configures plausible analytics

--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@accuser/svelte-plausible-analytics": "^0.3.0",
 		"@iconify/svelte": "^3.1.4",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.2",
