ci(front): adds push trigger for front directory

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,14 +1,19 @@
 name: Build & Deploy
 
 on:
-  workflow_dispatch:
+  
+  push:
+    branches:
+      - develop
+    paths:
+      - front
 
   repository_dispatch:
     types:
       - Strapi
 
 jobs:
-  build:
+  dance:
     runs-on: ubuntu-latest
 
     environment:
