--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
 		"postcss": "^8.4.24",
 		"postcss-nesting": "^11.2.2",
 		"svelte": "^3.54.0",
+		"svelte-meta-tags": "^2.8.0",
 		"tailwindcss": "^3.3.2",
 		"vite": "^4.3.0"
 	},
