ci(front): adds robots.txt replacement and renames frontend workflow

--- a/.github/workflows/build-deploy-front.yml
+++ b/.github/workflows/build-deploy-front.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy
+name: Build & Deploy Frontend
 
 on:
   
@@ -67,6 +67,11 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: bash _ci/build.sh
+
+      - name: Robots
+        if: ${{ github.ref == 'main' }}
+        run: |
+          sed -i 's/^Disallow\: \/$/Allow\: \//' front/build/robots.txt
 
       - name: Deploy
         uses: jakejarvis/s3-sync-action@master
