ci(project): adds workflow for backend and push dispatch

--- a/.github/workflows/build-deploy-front.yml
+++ b/.github/workflows/build-deploy-front.yml
@@ -1,19 +1,14 @@
 name: Build & Deploy Frontend
 
 on:
-  
-  push:
-    branches:
-      - develop
-    paths:
-      - "front"
-
   repository_dispatch:
     types:
+      - Frontend
       - Strapi
 
 jobs:
-  dance:
+  front:
+    name: Front
     runs-on: ubuntu-latest
 
     environment:
