ci(project): adjusts outputs to match changes step id

--- a/.github/workflows/trigger-build-deploy.yml
+++ b/.github/workflows/trigger-build-deploy.yml
@@ -9,8 +9,8 @@ jobs:
   changes:
     runs-on: ubuntu-latest
     outputs:
-      backend: ${{ steps.filter.outputs.backend }}
-      frontend: ${{ steps.filter.outputs.frontend }}
+      backend: ${{ steps.changes.outputs.backend }}
+      frontend: ${{ steps.changes.outputs.frontend }}
     steps:
     - uses: actions/checkout@v3
     - uses: dorny/paths-filter@v2
