--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,6 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@accuser/svelte-plausible-analytics": "github:dgrebb/svelte-plausible-analytics#release/v0.4.0",
 		"@iconify/svelte": "^3.1.4",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-static": "^2.0.2",
@@ -23,9 +22,11 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sentry/node": "^7.54.0",
-		"@sentry/profiling-node": "^0.3.0",
-		"@sentry/svelte": "^7.54.0",
+		"@accuser/svelte-plausible-analytics": "github:dgrebb/svelte-plausible-analytics#release/v0.4.0",
+		"@sentry/node": "^7.55.1",
+		"@sentry/profiling-node": "^1.0.4",
+		"@sentry/svelte": "^7.55.1",
+		"@sentry/sveltekit": "^7.55.1",
 		"blurhash": "^1.1.5",
 		"svelte-blurhash": "^1.2.1",
 		"svelte-markdown": "^0.2.3"
