--- a/.github/workflows/build-deploy-front.yml
+++ b/.github/workflows/build-deploy-front.yml
@@ -28,7 +28,10 @@ jobs:
       - name: Add Masks
         run: |
           echo "::add-mask::${{ github.token }}"
+          echo "::add-mask::${{ secrets.PUBLIC_API_PATH_NAVIGATION }}"
           echo "::add-mask::${{ secrets.PUBLIC_API_URL }}"
+          echo "::add-mask::${{ secrets.PUBLIC_API_PATH_HOME }}"
+          echo "::add-mask::${{ secrets.PUBLIC_API_PATH_FOOTER }}"
           echo "::add-mask::${{ secrets.API_KEY }}"
           echo "::add-mask::${{ secrets.PUBLIC_SENTRY_DSN }}"
           echo "::add-mask::${{ secrets.PUBLIC_ENV }}"
@@ -53,6 +56,9 @@ jobs:
         run: |
           touch front/.env
           echo PUBLIC_API_URL=${{ secrets.PUBLIC_API_URL }} >> front/.env
+          echo PUBLIC_API_PATH_NAVIGATION=${{ secrets.PUBLIC_API_PATH_NAVIGATION }} >> front/.env
+          echo PUBLIC_API_PATH_HOME=${{ secrets.PUBLIC_API_PATH_HOME }} >> front/.env
+          echo PUBLIC_API_PATH_FOOTER=${{ secrets.PUBLIC_API_PATH_FOOTER }} >> front/.env
           echo API_KEY=${{ secrets.API_KEY }} >> front/.env
           echo PUBLIC_SENTRY_DSN=${{ secrets.PUBLIC_SENTRY_DSN }} >> front/.env
           echo PUBLIC_ENV=${{ secrets.PUBLIC_ENV }} >> front/.env
