fix(ci): updates gh workflow with working branch conditional

--- a/.github/workflows/build-deploy-front.yml
+++ b/.github/workflows/build-deploy-front.yml
@@ -38,6 +38,12 @@ jobs:
           repository: dgrebb/dgrebb.com
           ref: ${{ secrets.DEPLOYMENT_BRANCH }}
           token: ${{ github.token }}
+          fetch-depth: 0
+
+      - name: Extract Branch Name
+        shell: bash
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+        id: extract_branch
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
@@ -64,7 +70,7 @@ jobs:
         run: bash _ci/build.sh
 
       - name: Robots
-        if: ${{ github.ref == 'main' }}
+        if: ${{ steps.extract_branch.outputs.branch }} == 'main'
         run: |
           sed -i 's/^Disallow\: \/$/Allow\: \//' front/build/robots.txt
 
