--- a/.github/workflows/build-deploy-front.yml
+++ b/.github/workflows/build-deploy-front.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     environment:
-      name: ${{ secrets.DEPLOYMENT_BRANCH == 'main' && 'prd' || 'stg' }}
+      name: ${{ github.ref == 'refs/heads/main' && 'prd' || 'stg' }}
 
     steps:
 
