--- a/.github/workflows/build-deploy-back.yml
+++ b/.github/workflows/build-deploy-back.yml
@@ -41,5 +41,5 @@ jobs:
       #   uses: actions/checkout@v3
       #   with:
       #     repository: dgrebb/dgrebb.com
-      #     ref: ${{ secrets.DEPLOYMENT_BRANCH }}
+      #     ref: ${{ github.ref }}
       #     token: ${{ github.token }}
