--- a/.github/workflows/build-deploy-front.yml
+++ b/.github/workflows/build-deploy-front.yml
@@ -13,13 +13,37 @@ jobs:
 
     steps:
 
+      - name: Branch Information
+        run: |
+          printf "\033[0;34mgithub.ref:\033[0m ${{ github.ref }}\n"
+          printf "\033[0;34mgithub.base_ref:\033[0m ${{ github.base_ref }}\n"
+          printf "\033[0;34mgithub.ref_name:\033[0m ${{ github.ref_name }}\n"
+          printf "\033[0;34mgithub.sha:\033[0m ${{ github.sha }}\n"
+          printf "\033[0;34mGITHUB_REF:\033[0m $GITHUB_REF\n"
+          printf "\033[0;34mGITHUB_REF_NAME:\033[0m $GITHUB_REF_NAME\n"
+          printf "\033[0;34mGITHUB_SHA:\033[0m $GITHUB_SHA\n"
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
           repository: dgrebb/dgrebb.com
-          ref: ${{ secrets.DEPLOYMENT_BRANCH }}
+          ref: ${{ github.ref }}
           token: ${{ github.token }}
           fetch-depth: 0
+
+      - name: Inspect Checkout
+        run: |
+          printf $(git log -n 5)
+
+      - name: Post-Checkout Branch Information
+        run: |
+          printf "\033[0;34mgithub.ref:\033[0m ${{ github.ref }}\n"
+          printf "\033[0;34mgithub.base_ref:\033[0m ${{ github.base_ref }}\n"
+          printf "\033[0;34mgithub.ref_name:\033[0m ${{ github.ref_name }}\n"
+          printf "\033[0;34mgithub.sha:\033[0m ${{ github.sha }}\n"
+          printf "\033[0;34mGITHUB_REF:\033[0m $GITHUB_REF\n"
+          printf "\033[0;34mGITHUB_REF_NAME:\033[0m $GITHUB_REF_NAME\n"
+          printf "\033[0;34mGITHUB_SHA:\033[0m $GITHUB_SHA\n"
 
       - name: Set .env
         run: |
