--- a/.github/workflows/dispatch-build-deploy.yml
+++ b/.github/workflows/dispatch-build-deploy.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: dorny/paths-filter@v2
       id: changes
       with:
-        base: ${{ secrets.DEPLOYMENT_BRANCH }}
+        base: ${{ github.ref_name }}
         filters: |
           backend:
             - 'back/**'
@@ -56,6 +56,6 @@ jobs:
       - name: Dispatch Frontend
         run: |
           curl -X POST https://api.github.com/repos/dgrebb/dgrebb.com/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
+          -H 'Accept: application/vnd.github+json' \
           -H 'Authorization: Bearer ${{ secrets.DISPATCH_TOKEN }}' \
-          --data '{"event_type": "Frontend"}'
+          --data '{"ref": ${{ github.ref_name }}}'
