--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.11.1",
+    "@strapi/plugin-sentry": "^4.11.1",
     "@strapi/plugin-seo": "^1.9.2",
     "@strapi/plugin-users-permissions": "4.11.1",
     "@strapi/provider-upload-aws-s3": "4.11.1",
