--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
 		"postcss": "^8.4.24",
 		"postcss-nesting": "^11.2.2",
 		"svelte": "^3.59.2",
+		"svelte-highlight": "^7.3.0",
 		"svelte-meta-tags": "^2.8.0",
 		"tailwindcss": "^3.3.2",
 		"unplugin-icons": "^0.16.3",
