--- a/.github/workflows/dispatch-build-deploy.yml
+++ b/.github/workflows/dispatch-build-deploy.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Dispatch Frontend
         run: |
-          curl -X POST https://api.github.com/repos/dgrebb/dgrebb.com/dispatches \
+          curl -X POST https://api.github.com/repos/dgrebb/dgrebb.com/actions/workflows/${{ secrets.FRONTEND_WORKFLOW_ID }}/dispatches \
           -H 'Accept: application/vnd.github+json' \
           -H 'Authorization: Bearer ${{ secrets.DISPATCH_TOKEN }}' \
           --data '{"ref": ${{ github.ref_name }}}'
