--- a/.github/workflows/dispatch-build-deploy.yml
+++ b/.github/workflows/dispatch-build-deploy.yml
@@ -58,4 +58,4 @@ jobs:
           curl -X POST https://api.github.com/repos/dgrebb/dgrebb.com/actions/workflows/${{ secrets.FRONTEND_WORKFLOW_ID }}/dispatches \
           -H 'Accept: application/vnd.github+json' \
           -H 'Authorization: Bearer ${{ secrets.DISPATCH_TOKEN }}' \
-          --data '{"ref": ${{ github.ref_name }}}'
+          --data '{"ref": "${{ github.ref_name }}"}'
