--- a/back/package.json
+++ b/back/package.json
@@ -32,7 +32,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "patch-package": "^7.0.0",
-    "postinstall-postinstall": "^2.1.0"
+    "patch-package": "^7.0.0"
   }
 }
