build(project): updates and includes package files in cz bump

--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "svelte",
-	"version": "0.0.1",
+	"name": "dgrebb.com",
+	"version": "2.3.1",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
