--- a/back/package.json
+++ b/back/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cms.dgrebb.com",
   "private": true,
-  "version": "1.0.0",
-  "description": "dgrebb.com CMS",
+  "version": "2.3.1",
+  "description": "cms.dgrebb.com",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
