build(testing): adds backstop reference script and reference images

--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "ref": "backstop reference",
     "test": "backstop test",
     "backstop": "backstop"
   },
