--- a/front/package.json
+++ b/front/package.json
@@ -18,7 +18,10 @@
 		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.24",
+		"postcss-import": "^15.1.0",
 		"postcss-nesting": "^11.2.2",
+		"prettier": "^3.0.0",
+		"prettier-plugin-tailwindcss": "^0.3.0",
 		"svelte": "^3.59.2",
 		"svelte-highlight": "^7.3.0",
 		"svelte-meta-tags": "^2.8.0",
