--- a/front/package.json
+++ b/front/package.json
@@ -27,7 +27,7 @@
 		"svelte-meta-tags": "^2.8.0",
 		"tailwindcss": "^3.3.2",
 		"unplugin-icons": "^0.16.3",
-		"vite": "^4.3.9"
+		"vite": "4.3.9"
 	},
 	"type": "module",
 	"dependencies": {
