build(front): fixes prettier configuration

--- a/front/.prettierrc
+++ b/front/.prettierrc
@@ -2,5 +2,7 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": false
+  "singleQuote": false,
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": false
 }
