--- a/front/package.json
+++ b/front/package.json
@@ -20,7 +20,8 @@
 		"postcss": "^8.4.24",
 		"postcss-import": "^15.1.0",
 		"postcss-nesting": "^11.2.2",
-		"prettier": "^3.0.0",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.3.0",
 		"svelte": "^3.59.2",
 		"svelte-highlight": "^7.3.0",
