--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.3.0",
+		"slugger": "^1.0.1",
 		"svelte": "^3.59.2",
 		"svelte-highlight": "^7.3.0",
 		"svelte-meta-tags": "^2.8.0",
