build(front): adds prettier-plugin-css-order and adjusts some styles

--- a/front/.prettierrc
+++ b/front/.prettierrc
@@ -3,6 +3,10 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": false,
-  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "plugins": [
+    "prettier-plugin-svelte",
+    "prettier-plugin-css-order",
+    "prettier-plugin-tailwindcss"
+  ],
   "pluginSearchDirs": false
 }
