--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
 		"postcss-import": "^15.1.0",
 		"postcss-nesting": "^11.2.2",
 		"prettier": "^2.8.8",
+		"prettier-plugin-css-order": "^1.3.1",
 		"prettier-plugin-svelte": "^2.10.1",
 		"prettier-plugin-tailwindcss": "^0.3.0",
 		"slugger": "^1.0.1",
