--- a/.github/workflows/dispatch-build-deploy.yml
+++ b/.github/workflows/dispatch-build-deploy.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
       - develop
+      - feature/*
+      - bugfix/*
+  pull_request:
+    branches:
+      - develop
 
 jobs:
   changes:
