build(front): configures sveltekit to ignore local `/uploads` image 404s during build

--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev.local": "vite --config vite.local.config.js dev",
 		"dev": "vite --config vite.config.js dev",
-		"build.local": "vite --config vite.local.config.js build",
+		"build.local": "WARN_ONLY=true vite --config vite.local.config.js build",
 		"build": "vite --config vite.config.js build",
 		"preview.local": "vite --config vite.local.config.js preview",
 		"preview": "vite --config vite.config.js preview"
