--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@strapi/plugin-i18n": "4.11.7",
+    "@strapi/plugin-open-ai": "^1.0.1",
     "@strapi/plugin-sentry": "^4.11.7",
     "@strapi/plugin-seo": "^1.9.2",
     "@strapi/plugin-users-permissions": "4.11.7",
