ci(project): sneaks in some workflow changes for PR dispatch

--- a/.github/workflows/build-deploy-front.yml
+++ b/.github/workflows/build-deploy-front.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   front:
     name: Frontend
+    concurrency: 
+      group: frontend
+      cancel-in-progress: true
     runs-on: ubuntu-latest
 
     environment:
