--- a/.github/workflows/build-deploy-front.yml
+++ b/.github/workflows/build-deploy-front.yml
@@ -1,7 +1,10 @@
 name: Build & Deploy Frontend
 
 on:
-  workflow_dispatch
+  pull_request:
+    branches: [main, develop]
+  workflow_dispatch:
+  
 
 jobs:
   front:
