build(front): applies path filter for frontend build/deploy workflow

--- a/.github/workflows/build-deploy-front.yml
+++ b/.github/workflows/build-deploy-front.yml
@@ -2,6 +2,8 @@ name: Build & Deploy Frontend
 
 on:
   pull_request:
+    paths: 
+      - 'front/**'
     branches: [main, develop]
   workflow_dispatch:
   
