--- a/front/.prettierrc
+++ b/front/.prettierrc
@@ -1,12 +1,9 @@
 {
-  "trailingComma": "es5",
   "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "es5",
   "semi": true,
   "singleQuote": false,
-  "plugins": [
-    "prettier-plugin-svelte",
-    "prettier-plugin-css-order",
-    "prettier-plugin-tailwindcss"
-  ],
+  "plugins": ["prettier-plugin-css-order", "prettier-plugin-tailwindcss"],
   "pluginSearchDirs": false
 }
