--- a/front/.prettierrc
+++ b/front/.prettierrc
@@ -4,6 +4,10 @@
   "trailingComma": "es5",
   "semi": true,
   "singleQuote": false,
-  "plugins": ["prettier-plugin-css-order", "prettier-plugin-tailwindcss"],
+  "plugins": [
+    "prettier-plugin-svelte",
+    "prettier-plugin-css-order",
+    "prettier-plugin-tailwindcss"
+  ],
   "pluginSearchDirs": false
 }
