--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,7 @@
 		"postcss-nesting": "^12.0.0",
 		"prettier": "^3.0.0",
 		"prettier-plugin-css-order": "^2.0.0",
+		"prettier-plugin-svelte": "^3.0.3",
 		"prettier-plugin-tailwindcss": "^0.4.1",
 		"slugger": "^1.0.1",
 		"svelte": "^4.1.1",
