ci(backstop): refactors backstopjs configuration and tests/utils

--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -4,25 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "ref.l": "backstop reference --config=backstop.local.json",
-    "ref.s": "backstop reference --config=backstop.staging.json",
-    "ref.p": "backstop reference --config=backstop.production.json",
-    "test.l": "backstop test --config=backstop.local.json",
-    "test.s": "backstop test --config=backstop.staging.json",
-    "test.p": "backstop test --config=backstop.production.json",
-    "approve.l": "backstop approve --config=backstop.local.json",
-    "approve.s": "backstop approve --config=backstop.staging.json",
-    "approve.p": "backstop approve --config=backstop.production.json",
-    "remote.l": "BACKSTOP_REMOTE_HTTP_PORT=3000 backstop remote --config=backstop.local.json",
-    "remote.s": "BACKSTOP_REMOTE_HTTP_PORT=3000 backstop remote --config=backstop.staging.json",
-    "remote.p": "BACKSTOP_REMOTE_HTTP_PORT=3000 backstop remote --config=backstop.production.json",
+    "ref": "backstop reference --config=backstop.config.js",
+    "test": "backstop test --config=backstop.config.js",
+    "approve": "backstop approve --config=backstop.config.js",
+    "remote": "backstop remote --config=backstop.config.js",
     "backstop": "backstop"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "backstopjs": "^6.2.2",
+    "backstopjs": "github:dgrebb/backstopjs#release/6.2.3",
+    "live-server": "^1.2.2",
     "puppeteer": "^20.7.4"
   }
 }
