build(backstop): updates utils and removes browser open from config

--- a/front/.prettierrc
+++ b/front/.prettierrc
@@ -3,7 +3,7 @@
   "useTabs": false,
   "trailingComma": "es5",
   "semi": true,
-  "singleQuote": false,
+  "singleQuote": true,
   "plugins": [
     "prettier-plugin-svelte",
     "prettier-plugin-css-order",
