--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -13,15 +13,18 @@
     "remote": "backstop remote --config=backstop.config.js",
     "start": "ENVIRONMENT='local' pm2 start",
     "stop": "pm2 stop backstop",
-    "test": "backstop test --config=backstop.config.js"
+    "test": "backstop test --config=backstop.config.js",
+    "post-install": "patch-package"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "backstopjs": "github:dgrebb/backstopjs#release/6.33.0",
+    "backstopjs": "github:dgrebb/BackstopJS#release/6.33.1",
     "live-server": "^1.2.2",
+    "patch-package": "^8.0.0",
     "pm2": "^5.3.0",
-    "puppeteer": "^20.7.4"
+    "puppeteer": "^20.7.4",
+    "super-simple-web-server": "^1.1.4"
   }
 }
