--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -11,6 +11,7 @@
     "pm2": "node ./node_modules/pm2/bin/pm2",
     "ref": "backstop reference --config=backstop.config.js",
     "remote": "backstop remote --config=backstop.config.js",
+    "serve": "http-server ../../front/build -p 8080",
     "start": "ENVIRONMENT='local' pm2 start",
     "stop": "pm2 stop backstop",
     "test": "backstop test --config=backstop.config.js",
@@ -21,7 +22,8 @@
   "license": "ISC",
   "dependencies": {
     "backstopjs": "github:dgrebb/BackstopJS#release/6.33.1",
-    "live-server": "^1.2.2",
+    "cors": "^2.8.5",
+    "http-server": "^14.1.1",
     "patch-package": "^8.0.0",
     "pm2": "^5.3.0",
     "puppeteer": "^20.7.4",
