--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,7 @@
 		"build": "vite --config vite.config.js build",
 		"preview.local": "vite --config vite.local.config.js preview",
 		"preview": "vite --config vite.config.js preview",
-    "postinstall": "patch-package"
+		"postinstall": "patch-package"
 	},
 	"devDependencies": {
 		"@accuser/svelte-plausible-analytics": "github:dgrebb/svelte-plausible-analytics#release/v0.6.0",
@@ -24,6 +24,7 @@
 		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.14",
+		"patch-package": "^8.0.0",
 		"postcss": "^8.4.24",
 		"postcss-import": "^15.1.0",
 		"postcss-nesting": "^12.0.0",
