build(backstop): removes `console.log` json files from refs and adds to `.gitignore`

--- a/.gitignore
+++ b/.gitignore
@@ -143,4 +143,5 @@ crash.*.log
 ############################
 
 _ci/backstop/bd/bitmaps_test/*
+_ci/backstop/bd/bitmaps_reference/*.log.json
 _ci/backstop/bd/html_report/*
