--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -7,12 +7,13 @@
     "approve": "backstop approve --config=backstop.config.js",
     "backstop": "backstop",
     "dev": "nodemon ./scenarios/index.js",
-    "monitor": "pm2 monit",
+    "mon": "pm2 monit",
     "pm2": "node ./node_modules/pm2/bin/pm2",
     "ref": "backstop reference --config=backstop.config.js",
     "remote": "backstop remote --config=backstop.config.js",
     "serve": "http-server ../../front/build -p 8080",
-    "start": "ENVIRONMENT='local' pm2 start",
+    "start": "ENVIRONMENT='local' pm2 start && pm2 monit",
+    "boot": "ENVIRONMENT='local' pm2 start",
     "stop": "pm2 stop backstop",
     "test": "backstop test --config=backstop.config.js",
     "post-install": "patch-package"
