--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -14,8 +14,8 @@
     "remote": "backstop remote --config=backstop.config.js",
     "restart": "ENVIRONMENT='local' pm2 restart backstop && pm2 monit",
     "serve": "http-server ../../front/build -p 8080",
-    "start": "ENVIRONMENT='local' pm2 start && pm2 monit",
-    "stop": "pm2 stop backstop --watch",
+    "start": "ENVIRONMENT='local' pm2 start ecosystem.config.js && pm2 monit",
+    "stop": "pm2 stop backstop && pm2 delete backstop && kill -9 $( lsof -i:3000 -t )",
     "test": "backstop test --config=backstop.config.js",
     "post-install": "patch-package"
   },
