--- a/_ci/backstop/package.json
+++ b/_ci/backstop/package.json
@@ -23,7 +23,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "backstopjs": "github:dgrebb/BackstopJS#0.0.3",
+    "backstopjs": "github:dgrebb/BackstopJS#feature/clear-storage",
     "cors": "^2.8.5",
     "http-server": "^14.1.1",
     "patch-package": "^8.0.0",
